--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "powerlangjs-webside",
   "version": "1.0.0",
   "description": "A backend to serve webside requests using PowerlangJS",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2"
+  }
 }
